@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         DBD-drizzle
-version:      0.002
+version:      0.003
 version_from: lib/DBD/drizzle.pm
 installdirs:  site
 requires:
