@@ -3,7 +3,7 @@
 #include "XSUB.h"
 /*#include <drizzle.h>*/
 
-static double mysql_constant(char* name, char* arg) {
+static double drizzle_constant(char* name, char* arg) {
   errno = 0;
   arg= arg;
   switch (*name) {
